--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glogloking</title>
+    <title>ElGlogloking</title>
+    <link rel="icon" href="img/perfil.png" type="image/png">
+        <meta name="description" content="Página oficial de la comunidad de Glogloking — streamings, eventos y noticias. Sigue a Glogloking en Kick para no perder las transmisiones.">
+        <link rel="canonical" href="https://kick.com/elglogloking">
+
+        <!-- Open Graph -->
+        <meta property="og:locale" content="es_ES">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Glogloking — Streamer de Kick">
+        <meta property="og:description" content="Página oficial de la comunidad de Glogloking: alertas de transmisiones, eventos y contenido.">
+        <meta property="og:url" content="https://kick.com/elglogloking">
+        <meta property="og:image" content="https://your-domain.example/img/perfil.png">
+        <meta property="og:image:alt" content="Glogloking Profile">
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Glogloking — Streamer de Kick">
+        <meta name="twitter:description" content="Página oficial de la comunidad de Glogloking: alertas de transmisiones, eventos y contenido.">
+        <meta name="twitter:image" content="https://your-domain.example/img/perfil.png">
+        <meta name="twitter:site" content="@elglogloking">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @keyframes float {
@@ -426,7 +446,7 @@
 
             <!-- Title -->
             <h1 class="text-white text-3xl sm:text-4xl font-bold text-center mb-2 animate-fadeInUp delay-100">
-                Glogloking
+                ElGlogloking
             </h1>
 
             <!-- Stream Status Indicator -->
